--- a/_includes/googleDrivePlayer.html
+++ b/_includes/googleDrivePlayer.html
@@ -1,3 +1,12 @@
+<div class="embed-container">
+  <iframe
+      width=" "
+      height=" "
+      src="https://drive.google.com/file/d/{{ include.id }}"
+      frameborder="0"
+      allowfullscreen="">
+  </iframe>
+</div>
 .embed-container {
   position: relative;
   padding-bottom: 56.25%;
@@ -13,13 +22,3 @@
   width: 100%;
   height: 100%;
 }
-<div class="embed-container">
-  <iframe
-      width="640"
-      height="480"
-      src="https://drive.google.com/file/d/{{ include.id }}"
-      frameborder="0"
-      allowfullscreen="">
-  </iframe>
-</div>
-
