--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -247,6 +247,7 @@
       {% endif %}
 
       {% include author-profile-custom-links.html %}
+      <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </ul>
   </div>
 </div>
