--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -247,7 +247,7 @@
       {% endif %}
 
       {% include author-profile-custom-links.html %}
-      <a class="twitter-timeline" data-lang="es" data-theme="light" href="https://twitter.com/CientificasEr?ref_src=twsrc%5Etfw">Tweets by CientificasEr</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     <a class="twitter-timeline" href="https://twitter.com/JuditSastre3/timelines/1258838778938089473?ref_src=twsrc%5Etfw">Prueba - Curated tweets by JuditSastre3</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </ul>
   </div>
 </div>
