--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -135,7 +135,7 @@ body:hover .visually-hidden button {
 }
 
 .wrapper {
-  margin-left: auto;
+  margin-left: 500px;
   margin-right: auto;
   width: 100%;
 }
