--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -38,11 +38,11 @@ body {
 .page {
   @include breakpoint($large) {
     float: right;
-    width: calc(80%);
+    width: 50%;
   }
 
   @include breakpoint($x-large) {
-    width: calc(80%);
+    width: 50%;
   }
 
   .page__inner-wrap {
