--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -8,12 +8,11 @@
 
   @include breakpoint($large) {
     float: right;
-    width: calc(80%);
+    width: 50%;
   }
 
   @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
+    width: 50%;
   }
 }
 
