--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -39,10 +39,12 @@ body {
   @include breakpoint($large) {
     float: right;
     width: 70%;
+    padding-right: 10%;
   }
 
   @include breakpoint($x-large) {
     width: 70%;
+    padding-right: 10%;
   }
 
   .page__inner-wrap {
