--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -9,10 +9,12 @@
   @include breakpoint($large) {
     float: right;
     width: 70%;
+    padding-right: 10%;
   }
 
   @include breakpoint($x-large) {
     width: 70%;
+    padding-right: 10%;
   }
 }
 
