--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -8,13 +8,13 @@
 
   @include breakpoint($large) {
     float: right;
-    width: 70%;
-    padding-right: 10%;
+    width: calc(100% - #{$right-sidebar-width});
+    padding-right: $right-sidebar-width;
   }
 
   @include breakpoint($x-large) {
-    width: 70%;
-    padding-right: 10%;
+    width: calc(100% - #{$right-sidebar-width});
+    padding-right: $right-sidebar-width;
   }
 }
 
