--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -38,11 +38,13 @@ body {
 .page {
   @include breakpoint($large) {
     float: right;
-    width: 50%;
+    width: 100%;
+    padding-right: 10%;
   }
 
   @include breakpoint($x-large) {
-    width: 50%;
+    width: 100%;
+    padding-right: 10%;
   }
 
   .page__inner-wrap {
